adding Linux Blog

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<!-- Menu -->
 				<div id="navigation">
 				  <ul>
-					<li><a id="current" href="#">主页</a></li>
+					<li><a id="current" href="index.html">主页</a></li>
 					<li><a href="#">作品</a>
 						<ul>
                         	<li><a href="#">C#</a></li>
@@ -71,12 +71,12 @@
 							<li><a href="#">JAVA</a></li>
 						</ul>
 					</li>
-					<li><a href="#">博客</a>
+					<li><a href="blog/linux/blog_index.html">博客</a>
 						<ul>
 							<li><a href="#">Java</a></li>
 							<li><a href="#">SQL</a></li>
 							<li><a href="#">XML</a></li>	
-                            <li><a href="#">LINUX</a></li>							
+                            <li><a href="blog/linux/index.html">LINUX</a></li>							
 						</ul>
 					</li>
 					<li><a href="#">下载</a></li>
