--- a/index.html
+++ b/index.html
@@ -160,7 +160,18 @@
 	<div class="container">
 
 		<div class="sixteen columns"><h2 class="related-title"><span>最新动态</span></h2></div>
-	
+
+		<div class="one-third column">
+			<div class="item">
+				<div class="item-img">
+					<a href="images/latest-news-images/nvg-image-OO2.png" rel="imagebox[gallery]" title="敬请期待"><img src="images/latest-news-images/nvg-image-OO2.png" alt=""/><div class="overlay zoom"></div></a>
+				</div>
+				<div class="item-meta">
+					<h4><a href="blog/linux/Linux002.html"></a></h4>
+					 Linux常用命令
+				</div>
+			</div>
+		</div>
 		<!-- Project - 1/3 Columns -->
 		<div class="one-third column">
 			<div class="item">
@@ -185,15 +196,29 @@
 		
 			<!-- Title -->
 			<h2 class="related-title"><span>热门文章</span></h2>
+            
+            <!-- Blog Post - 1/4 Columns -->
+			<div class="four columns" style="padding-left: 0; margin-left:0">
+				<div class="item">
+					<div class="item-img img-blog">
+						<a href="blog/linux/Linux002.html"><img src="images/latest-news-images/nvg-image-OO2.png" alt=""/><div class="overlay link"></div></a>
+					</div>
+					<div class="item-meta meta-blog">
+						<h4><a href="blog/linux/Linux002.html">Linux常用指令</a></h4>
+						<span>2015/10/06 0评论</span>
+						<p>欢迎和大家一起学习</p>
+					</div>
+				</div>
+			</div>
 
 			<!-- Blog Post - 1/4 Columns -->
 			<div class="four columns" style="padding-left: 0; margin-left:0">
 				<div class="item">
 					<div class="item-img img-blog">
-						<a href="blog_post.html"><img src="images/latest-news-images/nvg-image-OO1.png" alt=""/><div class="overlay link"></div></a>
+						<a href="#"><img src="images/latest-news-images/nvg-image-OO1.png" alt=""/><div class="overlay link"></div></a>
 					</div>
 					<div class="item-meta meta-blog">
-						<h4><a href="blog_post.html">敬请期待</a></h4>
+						<h4><a href="#">敬请期待</a></h4>
 						<span>2015/09/24 0评论</span>
 						<p>即将更新博客文章</p>
 					</div>
@@ -208,7 +233,11 @@
 			<!-- Testimonials Carousel -->
 			<div class="testimonials-carousel">
 				<ul class="carousel">
-				
+					<li class="testimonial">
+						<div class="testimonials">博客Linux门户已经发布。</div>
+						<div class="testimonials_bg"></div>
+						<div class="testimonials_author">Anderson, <span>2015.10.06 19:25</span></div>
+					</li>				
 					<li class="testimonial">
 						<div class="testimonials">新版博客门户已经建立。</div>
 						<div class="testimonials_bg"></div>
