ADDING NEW CONTENT FOR JAVA BLOG

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 					</li>
 					<li><a href="blog/linux/blog_index.html">博客</a>
 						<ul>
-							<li><a href="#">Java</a></li>
+							<li><a href="blog/java/index.html">Java</a></li>
 							<li><a href="#">SQL</a></li>
 							<li><a href="#">XML</a></li>	
                             <li><a href="blog/linux/index.html">LINUX</a></li>							
@@ -160,6 +160,19 @@
 	<div class="container">
 
 		<div class="sixteen columns"><h2 class="related-title"><span>最新动态</span></h2></div>
+		
+        <div class="one-third column">
+			<div class="item">
+				<div class="item-img">
+					<a href="images/latest-news-images/nvg-image-OO3.png" rel="imagebox[gallery]" title="敬请期待"><img src="images/latest-news-images/nvg-image-OO3.png" alt=""/><div class="overlay zoom"></div></a>
+				</div>
+				<div class="item-meta">
+					<h4><a href="blog/java/JavaConcurrentModificationExcepton.html"></a></h4>
+					 Java concurrentModificationException 解析
+				</div>
+			</div>
+		</div>
+
 
 		<div class="one-third column">
 			<div class="item">
@@ -197,6 +210,20 @@
 			<!-- Title -->
 			<h2 class="related-title"><span>热门文章</span></h2>
             
+             <!-- Blog Post - 1/4 Columns -->
+			<div class="four columns" style="padding-left: 0; margin-left:0">
+				<div class="item">
+					<div class="item-img img-blog">
+						<a href="blog/java/JavaConcurrentModificationExcepton.html"><img src="images/latest-news-images/nvg-image-OO3.png" alt=""/><div class="overlay link"></div></a>
+					</div>
+					<div class="item-meta meta-blog">
+						<h4><a href="blog/linux/Linux002.html">Java异常处理</a></h4>
+						<span>2015/11/01 0评论</span>
+						<p>本人最新文章</p>
+					</div>
+				</div>
+			</div>
+            
             <!-- Blog Post - 1/4 Columns -->
 			<div class="four columns" style="padding-left: 0; margin-left:0">
 				<div class="item">
@@ -233,6 +260,11 @@
 			<!-- Testimonials Carousel -->
 			<div class="testimonials-carousel">
 				<ul class="carousel">
+                	<li class="testimonial">
+						<div class="testimonials">博客Java门户已经发布。</div>
+						<div class="testimonials_bg"></div>
+						<div class="testimonials_author">Anderson, <span>2015.11.01 09:41</span></div>
+					</li>	
 					<li class="testimonial">
 						<div class="testimonials">博客Linux门户已经发布。</div>
 						<div class="testimonials_bg"></div>
